src/index.css
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  scroll-behavior: smooth;
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100vh;
  font-family: 'Roboto', sans-serif;
  background-color: var(--main-bg-color);
}

ul {
  list-style: none;
}

button {
  cursor: pointer;
  background-color: transparent;
  border: none;
  outline: none;
}

.container {
  max-width: 1200px;
  padding: 0 1em;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

